# MindTube

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_FILE_MAPPING.md  PROJECT_WBS.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
agen_docs/: P0_P1_manifest.json
agen_docs/docs/: AGENT_GUIDE.md  ERRORS.md  LOCAL_HISTORY.md  OBSERVABILITY.md  PROMPTS.md  RUNBOOK.md  SECURITY.md  TRANSCRIPT_POLICY.md
agen_docs/schemas/: map_schema.json  validation_schema.json
backend/: .coveragerc  .env.example  .gitignore  Makefile  Makefile.test  README.md  UV_INSTALLATION_GUIDE.md  pyproject.toml  pytest.ini  requirements-simple.txt  requirements.txt  run_tdd_tests.py
backend/app/: __init__.py  main.py
backend/app/api/: ingest.py  results.py  status.py
backend/app/core/: config.py  logging.py
backend/app/models/: schemas.py
backend/app/services/: llm_client.py  summarization.py  youtube_transcript.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: test_full_pipeline.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_llm_client.py  test_summarization.py  test_youtube_transcript.py
data/: .gitkeep
docs/: AZURE_MIGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_COMMANDS_GUIDE.md  YOUTUBE_TRANSCRIPT_SETUP.md  architecture_design.md  azure-openai-setup.md  backend-design.md  configuration.md  features.md  frontend-design.md  mindtube_prototype.html  mindtube_roadmap.md  plan.md  prd.md  project_todo.md  roadmap.md  tdd_guide_be.md  test-plan.md  userflow.md  wbs.csv  wbs.md  youtube_transcript_integration.md
docs_v2/: MindTube_Architecture_Design.md  design.md  tdd-playbook.md
documents/agen_docs/: openapi.yaml
documents/agen_docs/docs/: API_README.md  CONTRIBUTING.md  COST_POLICY.md  DATA_MODEL.md  QA_PLAN.md
documents/agen_docs/schemas/: reduce_schema.json
documents/agen_docs/sql/: ddl.sql
documents/doing/: WBS_M0.md
documents/external_docs/: azure-ai.md
documents/notes/: best_practice.md  workflow.md
documents/plan/: design.md  roadmap.md  wbs-kanban.md  wbs.md
documents/todo/: WBS_M2.md  WBS_M3.md  WBS_M4.md  WBS_M6.md
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Header.tsx  HistoryPanel.tsx  ProcessingProgress.tsx  ResultsTabs.tsx  SettingsPanel.tsx  VideoUrlInput.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: index.ts
mindtube/core/: config.py
mindtube/models/: __init__.py  analysis.py  errors.py  transcript.py  video.py
rules/: coding_agent_rules.md
scripts/: dev.sh  test-servers.sh  test-setup.sh
src/ytnote/: __init__.py  config.py
src/ytnote/cli/: __init__.py  main.py
src/ytnote/core/: __init__.py
src/ytnote/io/: __init__.py
src/ytnote/llm/: __init__.py
src/ytnote/models/: __init__.py
src/ytnote/qa/: __init__.py
status/: comprehensive_test_results.md  final_setup_status.md  phase0_complete.md  pjstatus.md  setup_test_results.md  timeline_update_summary.md  todo_chau.md
tasks/phase0/: TASK-001-setup-project-structure.md  TASK-002-implement-makefile.md  TASK-003-setup-dependencies.md  TASK-004-configuration-management.md  TASK-005-basic-test-suite.md
tasks/phase1/: TASK-006-video-metadata-models.md  TASK-007-transcript-models.md  TASK-008-analysis-models.md  TASK-009-error-models.md
tasks/phase2/: TASK-010-youtube-adapter.md  TASK-011-azure-openai-adapter.md  TASK-012-cache-adapter.md  TASK-013-storage-adapter.md
tasks/phase3/: TASK-014-pipeline-interface.md  TASK-015-input-validation-stage.md  TASK-016-transcript-stage.md  TASK-017-analysis-stage.md  TASK-018-output-stage.md  TASK-019-core-engine.md
tasks/phase4/: TASK-020-cli-base.md  TASK-021-analyze-command.md  TASK-022-individual-commands.md  TASK-023-cli-config-commands.md
tasks/phase5/: TASK-024-fastapi-setup.md  TASK-025-analysis-endpoints.md  TASK-026-websocket-support.md  TASK-027-api-rate-limiting.md
tasks/phase6/: TASK-028-unit-test-suite-completion.md  TASK-029-integration-test-suite.md  TASK-030-performance-testing.md  TASK-031-security-testing.md
tasks/phase7/: TASK-032-api-documentation.md  TASK-033-user-documentation.md  TASK-034-docker-configuration.md  TASK-035-cicd-pipeline.md
tests/: conftest.py  test_foo.py
tests/fixtures/: __init__.py  sample_analysis.json  sample_transcript.json  sample_video_metadata.json  transcript_data.py  urls.py
tests/integration/adapters/: __init__.py
tests/unit/: test_config.py  test_smoke.py
tests/unit/core/: __init__.py  test_video_id.py
tests/unit/io/: __init__.py  test_transcript.py  test_transcript_fallback.py
tests/unit/models/: test_analysis.py  test_errors.py  test_transcript.py  test_video.py
tests/utils/: test_helpers.py
todo/: WBS_M0.md  WBS_M1.md  WBS_M5.md  WBS_M7.md
